--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "mongodb": "^4.2.2"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
     "eslint": "^8.4.1",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.15"
   }
 }
